recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {	
	 
	var x=steps 
	var incre = increment
	
	avance(x+5)
	gauche(angle)
	length = length+incre
	
	if (length == 75){
	 	return
	 }
}
